# beautiful-bushwren

./: .nvim.lua  Cargo.toml  NOTES.md  example.sh  flake.nix
.cargo/: config.toml
data/: Cargo.toml
data/src/: lib.rs
editor/: Cargo.toml
game/: Cargo.toml
game/src/: lib.example.rs  lib.rs  main.rs
nickel2rust/: Cargo.toml  debug_rt_check.txt
nickel2rust/assets/: _types.ncl  example_01.ncl  example_02.ncl
nickel2rust/src/: error.rs  lib.rs  main.rs
playground/nickel/: spells.ncl  units.ncl
src/: main.rs
