[workspace]
members = ["game", "editor", "nickel2rust"]
default-members = ["game"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.15", features = ["dynamic_linking", "wayland", "x11"] }
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.8"
game = { path = "game" }
editor = { path = "editor" }

[profile.dev]
debug = true
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
